updated to run another

--- a/.github/workflows/validate-cheatsheets.yaml
+++ b/.github/workflows/validate-cheatsheets.yaml
@@ -4,19 +4,18 @@ on:
   schedule:
     - cron: '0 6 * * *'  # daily at 6am UTC
   workflow_dispatch:
-
 jobs:
   validate:
     runs-on: ubuntu-latest
+    outputs:
+      result: ${{ steps.check.outputs.result }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Parse core.js and validate HTML files
+      - id: check
+        name: Validate core.js
         run: |
-          echo "Checking cheatsheet entries in core.js..."
-
-          # Extract JS array from core.js
           cheatsheets=$(awk '/const cheatsheets = \[/, /\]/{ print }' core.js \
             | grep -v '//NEW-CHEATSHEET' \
             | grep -o '"[^"]\+"' \
@@ -26,14 +25,29 @@ jobs:
           for sheet in $cheatsheets; do
             file="cheatsheets/${sheet}.html"
             if [ ! -f "$file" ]; then
-              echo "❌ Missing: $file"
+              echo "Missing: $file"
               missing=1
             fi
           done
 
           if [ "$missing" -eq 0 ]; then
             echo "✅ Valid"
+            echo "result=valid" >> $GITHUB_OUTPUT
           else
             echo "❌ Invalid"
-            exit 1
+            echo "result=invalid" >> $GITHUB_OUTPUT
           fi
+
+  on-valid:
+    needs: validate
+    if: needs.validate.outputs.result == 'valid'
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🎉 All cheatsheets are valid!"
+
+  on-invalid:
+    needs: validate
+    if: needs.validate.outputs.result == 'invalid'
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "🚨 Missing cheatsheet(s)! Time to generate more."
