--- a/.github/workflows/validate-cheatsheets.yaml
+++ b/.github/workflows/validate-cheatsheets.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Dispatch HTML validator
         run: |
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GH_PAT }}" \
+            -H "Authorization: token ${{ secrets.ADVANCED_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/dispatches \
             -d '{"event_type":"run-html-validator"}'
@@ -60,7 +60,7 @@ jobs:
       - name: Dispatch cheat sheet generator
         run: |
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GH_PAT }}" \
+            -H "Authorization: token ${{ secrets.ADVANCED_PAT }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/dispatches \
             -d '{"event_type":"generate-missing-cheatsheet"}'
