--- a/.github/workflows/generate-missing-sheet.yaml
+++ b/.github/workflows/generate-missing-sheet.yaml
@@ -62,8 +62,8 @@ jobs:
           git checkout -b $branch
           git add cheatsheets/${{ steps.find_missing.outputs.missing }}.html
           git commit -m "Add cheat sheet: ${{ steps.find_missing.outputs.missing }}"
-
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git $branch
+          git remote set-url origin "https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git"
+          git push origin $branch
 
           GH_TOKEN=${{ secrets.GH_PAT }} gh pr create \
             --base main \
