--- a/.github/workflows/generate-missing-sheet.yaml
+++ b/.github/workflows/generate-missing-sheet.yaml
@@ -42,25 +42,29 @@ jobs:
         id: generate_html
         run: |
           topic=${{ steps.find_missing.outputs.missing }}
-          prompt="Generate a dense, printable, Tailwind-styled HTML cheat sheet for: $topic"
+          
+          payload=$(cat <<EOF
+          {
+            "model": "gpt-4",
+            "messages": [{"role": "user", "content": "Generate a dense, printable, Tailwind-styled HTML cheat sheet for: $topic"}],
+            "temperature": 0.7
+          }
+          EOF
+          )
 
           html=$(curl https://api.openai.com/v1/chat/completions \
             -s \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
             -H "Content-Type: application/json" \
-            -d '{
-              "model": "gpt-4",
-              "messages": [{"role": "user", "content": "'$prompt'"}],
-              "temperature": 0.7
-            }' | jq -r '.choices[0].message.content')
+            -d "$payload" | jq -r '.choices[0].message.content')
 
-          echo "$html" > cheatsheets/$topic.html
+          echo "$html" > "cheatsheets/$topic.html"
 
       - name: Create and push PR branch
         run: |
           branch="feature/add-${{ steps.find_missing.outputs.missing }}"
           git checkout -b $branch
-          git add cheatsheets/${{ steps.find_missing.outputs.missing }}.html
+          git add "cheatsheets/${{ steps.find_missing.outputs.missing }}.html"
           git commit -m "Add cheat sheet: ${{ steps.find_missing.outputs.missing }}"
           git remote set-url origin "https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git"
           git push origin $branch
@@ -70,5 +74,3 @@ jobs:
             --head $branch \
             --title "Add cheat sheet: ${{ steps.find_missing.outputs.missing }}" \
             --body "This PR adds the generated cheat sheet for ${{ steps.find_missing.outputs.missing }}."
-        env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
