--- a/.github/workflows/generate-missing-sheet.yaml
+++ b/.github/workflows/generate-missing-sheet.yaml
@@ -38,59 +38,59 @@ jobs:
 
           echo "missing=$missing" >> $GITHUB_OUTPUT
 
-                - name: Call OpenAI API to generate HTML
+          - name: Call OpenAI API to generate HTML
           id: generate_html
           run: |
-          # Check if missing is empty
-          if [ -z "${{ steps.find_missing.outputs.missing }}" ]; then
-            echo "No missing cheatsheets found!"
-            exit 0
-          fi
-          
-          topic="${{ steps.find_missing.outputs.missing }}"
-          echo "Generating cheatsheet for topic: $topic"
-          
-          # Create a more robust API call
-          response=$(curl https://api.openai.com/v1/chat/completions \
-            -s \
-            -H "Authorization: Bearer $OPENAI_API_KEY" \
-            -H "Content-Type: application/json" \
-            -d @- << EOF
-          {
-            "model": "gpt-4",
-            "messages": [
-              {
-                "role": "system", 
-                "content": "You are an expert at creating concise, information-dense cheat sheets. Create only valid HTML with Tailwind CSS classes. Do not include any markdown or explanation - ONLY the HTML content."
-              },
-              {
-                "role": "user", 
-                "content": "Generate a dense, printable, Tailwind-styled HTML cheat sheet for: $topic. Include common commands, syntax, and best practices."
-              }
-            ],
-            "temperature": 0.7
-          }
+            # Check if missing is empty
+            if [ -z "${{ steps.find_missing.outputs.missing }}" ]; then
+              echo "No missing cheatsheets found!"
+              exit 0
+            fi
+            
+            topic="${{ steps.find_missing.outputs.missing }}"
+            echo "Generating cheatsheet for topic: $topic"
+            
+            # Create a more robust API call
+            response=$(curl https://api.openai.com/v1/chat/completions \
+              -s \
+              -H "Authorization: Bearer $OPENAI_API_KEY" \
+              -H "Content-Type: application/json" \
+              -d @- << EOF
+            {
+              "model": "gpt-4",
+              "messages": [
+                {
+                  "role": "system", 
+                  "content": "You are an expert at creating concise, information-dense cheat sheets. Create only valid HTML with Tailwind CSS classes. Do not include any markdown or explanation - ONLY the HTML content."
+                },
+                {
+                  "role": "user", 
+                  "content": "Generate a dense, printable, Tailwind-styled HTML cheat sheet for: $topic. Include common commands, syntax, and best practices."
+                }
+              ],
+              "temperature": 0.7
+            }
             EOF
-          )
-
-          # Print full response for inspection
-          echo "===== FULL API RESPONSE ====="
-          echo "$response"
-
-          # Extract content more carefully
-          html=$(echo "$response" | jq -r '.choices[0].message.content')
-
-          # Check if extraction succeeded
-          if [ -z "$html" ] || [ "$html" = "null" ]; then
-            echo "Failed to extract HTML content from API response"
-            echo "Full response: $response"
-            exit 1
-          fi
-
-          # Save to file and verify
-          echo "$html" > "cheatsheets/$topic.html"
-          echo "Content saved to cheatsheets/$topic.html"
-          ls -la "cheatsheets/$topic.html"
+            )
+            
+            # Debug the API response
+            echo "API Response:"
+            echo "$response" | head -n 30
+            
+            # Extract content more carefully
+            html=$(echo "$response" | jq -r '.choices[0].text')
+            
+            # Check if extraction succeeded
+            if [ -z "$html" ] || [ "$html" = "null" ]; then
+              echo "Failed to extract HTML content from API response"
+              echo "Full response: $response"
+              exit 1
+            fi
+            
+            # Save to file and verify
+            echo "$html" > "cheatsheets/$topic.html"
+            echo "Content saved to cheatsheets/$topic.html"
+            ls -la "cheatsheets/$topic.html"
       - name: Create and push PR branch
         run: |
           branch="feature/add-${{ steps.find_missing.outputs.missing }}"
