--- a/.github/workflows/generate-missing-sheet.yaml
+++ b/.github/workflows/generate-missing-sheet.yaml
@@ -38,21 +38,21 @@ jobs:
 
           echo "missing=$missing" >> $GITHUB_OUTPUT
 
-          - name: Call OpenAI API to generate HTML
-          id: generate_html
-          run: |
-            # Check if missing is empty
-            if [ -z "${{ steps.find_missing.outputs.missing }}" ]; then
-              echo "No missing cheatsheets found!"
-              exit 0
-            fi
-            
-            topic="${{ steps.find_missing.outputs.missing }}"
-            echo "Generating cheatsheet for topic: $topic"
-            
-            # Create a more robust API call
-            cat > payload.json <<EOF
-            {
+      - name: Call OpenAI API to generate HTML
+        id: generate_html
+        run: |
+          # Check if missing is empty
+          if [ -z "${{ steps.find_missing.outputs.missing }}" ]; then
+            echo "No missing cheatsheets found!"
+            exit 0
+          fi
+          
+          topic="${{ steps.find_missing.outputs.missing }}"
+          echo "Generating cheatsheet for topic: $topic"
+          
+          # Create a more robust API call
+          cat > payload.json <<EOF
+          {
             "model": "gpt-4",
             "messages": [
                 {
@@ -65,33 +65,33 @@ jobs:
                 }
             ],
             "temperature": 0.7
-            }
-            EOF
+          }
+          EOF
 
-            response=$(curl -s https://api.openai.com/v1/chat/completions \
+          response=$(curl -s https://api.openai.com/v1/chat/completions \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
             -H "Content-Type: application/json" \
             -d @payload.json)
+          
+          # Debug the API response
+          echo "API Response:"
+          echo "$response" | head -n 30
+          
+          # Extract content more carefully
+          html=$(echo "$response" | jq -r '.choices[0].message.content')
+          
+          # Check if extraction succeeded
+          if [ -z "$html" ] || [ "$html" = "null" ]; then
+            echo "Failed to extract HTML content from API response"
+            echo "Full response: $response"
+            exit 1
+          fi
+          
+          # Save to file and verify
+          echo "$html" > "cheatsheets/$topic.html"
+          echo "Content saved to cheatsheets/$topic.html"
+          ls -la "cheatsheets/$topic.html"
 
-            
-            # Debug the API response
-            echo "API Response:"
-            echo "$response" | head -n 30
-            
-            # Extract content more carefully
-            html=$(echo "$response" | jq -r '.choices[0].text')
-            
-            # Check if extraction succeeded
-            if [ -z "$html" ] || [ "$html" = "null" ]; then
-              echo "Failed to extract HTML content from API response"
-              echo "Full response: $response"
-              exit 1
-            fi
-            
-            # Save to file and verify
-            echo "$html" > "cheatsheets/$topic.html"
-            echo "Content saved to cheatsheets/$topic.html"
-            ls -la "cheatsheets/$topic.html"
       - name: Create and push PR branch
         run: |
           branch="feature/add-${{ steps.find_missing.outputs.missing }}"
@@ -101,7 +101,7 @@ jobs:
           git remote set-url origin "https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git"
           git push origin $branch
 
-          GH_TOKEN=${{ secrets.GH_PAT }} gh pr create \
+          gh pr create \
             --base main \
             --head $branch \
             --title "Add cheat sheet: ${{ steps.find_missing.outputs.missing }}" \
